--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "frontSmiledu": {
@@ -42,7 +42,6 @@
               ],
               "optimization": true,
               "outputHashing": "all",
-              "sourceMap": false,
               "extractCss": true,
               "namedChunks": false,
               "extractLicenses": true,
@@ -123,6 +122,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "frontSmiledu"
+    }
+  },
+  "defaultProject": "frontSmiledu",
+  "cli": {
+    "analytics": false
+  }
 }
