--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "@angular/core": "~11.0.2",
     "@angular/forms": "~11.0.2",
     "@angular/material": "^11.0.1",
+    "@angular/material-moment-adapter": "^11.0.1",
     "@angular/platform-browser": "~11.0.2",
     "@angular/platform-browser-dynamic": "~11.0.2",
     "@angular/router": "~11.0.2",
+    "@rxweb/reactive-form-validators": "^2.1.2",
     "hammerjs": "^2.0.8",
+    "httpclient": "^0.1.0",
+    "moment": "^2.29.1",
     "rxjs": "~6.5.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
